--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta name="title" content="Mini起始页">
+    <meta name="author" content="鸢离">
+    <meta name="keywords" content="Mini起始页,mini,Mini,MINI,MINI起始页,浏览器主页,浏览器,鸢离,YuanLi,imyuanli,鸢离起始页,浏览器起始页,起始页,网站首页,网站起始页,搜索引擎,自定义网站捷径,网站捷径,yuanli">
+    <meta name="description" content="Mini起始页,是一个简单,便捷的浏览器起始页,拥有添加快捷导航,搜索引擎的个性化服务,一键切换壁纸,收藏壁纸,便利贴等,还有各种个性化设置,打造属于你的浏览器起始页。自定义您新标签页上的网站和壁纸以及搜索引擎,创建和编辑属于您自己的浏览器标签页海量壁纸、常用网址随心订制">
+    <meta name="robots" content="Mini起始页,mini,Mini,MINI,MINI起始页,浏览器主页,浏览器,鸢离,YuanLi,imyuanli,鸢离起始页,浏览器起始页,起始页,网站首页,网站起始页,搜索引擎,自定义网站捷径,网站捷径,yuanli">
+    <title>Mini 起始页</title>
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
