--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/svg+xml" href="public/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="sogou_site_verification" content="zHNaGoVjWe" />
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="title" content="Mini起始页">
     <meta name="author" content="鸢离">
